<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="250dp"
        android:layout_above="@+id/buttonAddIncome"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        style="@style/Button"
        android:text="@string/new_item">
    </Button>

    <Button
        android:id="@+id/buttonAddIncome"
        android:layout_width="wrap_content"
        android:layout_above="@+id/buttonAddCategory"
        android:layout_alignStart="@+id/buttonAddItem"
        android:layout_alignEnd="@+id/buttonAddItem"
        android:layout_marginBottom="10dp"
        style="@style/Button"
        android:text="@string/add_income">
    </Button>

    <Button
        android:id="@+id/buttonAddCategory"
        android:layout_width="wrap_content"
        android:layout_alignStart="@+id/buttonAddItem"
        android:layout_alignEnd="@+id/buttonAddItem"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        style="@style/Button"
        android:text="@string/add_category">
    </Button>

    <Button
        android:id="@+id/app"
        android:layout_width="wrap_content"
        android:layout_below="@+id/buttonAddCategory"
        android:layout_alignStart="@+id/buttonAddItem"
        android:layout_alignEnd="@+id/buttonAddItem"
        style="@style/Button"
        android:text="@string/about_app">
    </Button>

</RelativeLayout>